# ASGI

./: ASGI.c  ASGI.cpp  ASGI.h  CMakeLists.txt  Export.h  LICENSE  README.md
DirectX12/: DirectX12_GPU.c  DirectX12_GPU.cpp  DirectX12_GPU.h  DirectX12_GPUAdapter.cpp  DirectX12_GPUAdapter.h  DirectX12_GPUDevice.c  DirectX12_GPUDevice.cpp  DirectX12_GPUDevice.h
GPUInterface/: GPU.h  GPUAdapter.h  GPUAddressMode.h  GPUBindGroup.h  GPUBindGroupDescriptor.h  GPUBindGroupEntry.h  GPUBindGroupLayout.h  GPUBindGroupLayoutDescriptor.h  GPUBindGroupLayoutEntry.h  GPUBlendComponent.h  GPUBlendFactor.h  GPUBlendOperation.h  GPUBlendState.h  GPUBuffer.h  GPUBufferBinding.h  GPUBufferBindingLayout.h  GPUBufferBindingType.h  GPUBufferDescriptor.h  GPUBufferState.h  GPUBufferUsage.h  GPUColor.h  GPUColorTargetState.h  GPUColorWrite.h  GPUCommandBuffer.h  GPUCommandBufferDescriptor.h  GPUCommandEncoder.h  GPUCommandEncoderDescriptor.h  GPUCompareFunction.h  GPUCompilationInfo.h  GPUCompilationMessage.h  GPUCompilationMessageType.h  GPUComputePassDescriptor.h  GPUComputePassEncoder.h  GPUComputePipeline.h  GPUComputePipelineDescriptor.h  GPUCullMode.h  GPUDefines.h  GPUDepthStencilState.h  GPUDevice.h  GPUDeviceDescriptor.h  (+76 more)
